# ROICaseBuilder

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  pyproject.toml
__tests__/: CaseInputForm.test.tsx  ScenarioToggle.test.tsx
_archive_backend/: main.py
_archive_backend/db/: schema.sql
_archive_backend/engine/: result.py
_archive_backend/hooks/: __init__.py
_archive_backend/kpi_library/: formulas.py  registry.py
_archive_backend/models/: company_data.py  enums.py
_archive_backend/orchestrator/: __init__.py  agent.py  system_prompt.py
_archive_backend/prompts/: narrative_cfo.py  narrative_system.py
_archive_tests/: conftest.py  test_agentic_orchestrator.py  test_api.py  test_calculator.py  test_confidence.py  test_events.py  test_firecrawl_provider.py  test_models.py  test_narrative_quality.py  test_orchestrator_agent.py  test_registry.py  test_stream_manager.py
backend/: main.py
frontend/: package-lock.json  package.json
research/: benchmark-data-sources-research.md  engineering-data-infra-research.md  methodology-engine-architecture.md  roi-methodology-kpi-research.md  ux-interface-design-research.md  valyu-ai-research.md
scripts/: load-env.ts  test-calculation.ts  test-e2e-nike.ts
src/: instrumentation.ts
src/app/: layout.tsx  (+2 more)
supabase/: config.toml
tests/: test_agent_tools.py  test_company_classifier.py  test_edge_cases.py  test_formulas.py  test_hooks.py  test_loader.py  test_merge.py  test_methodology_schema.py  test_orchestrator.py  test_orchestrator_agent.py  test_valyu_provider.py  test_websearch_provider.py
(+119 files in other folders)
