[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "cproi"
version = "0.1.0"
description = "Client Partner ROI Calculator"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.80.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "valyu>=0.1.0",
    "firecrawl-py>=1.0",
    "supabase>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call real external APIs",
]
